Creado mediante Colaboratory

--- a/Logistic_Regression.ipynb
+++ b/Logistic_Regression.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "147jKBIGpo00Pk3sp70-peJ0bjAlW5G24",
-      "authorship_tag": "ABX9TyMl/2l4K0T9JAMCziIGbYEM",
+      "authorship_tag": "ABX9TyNZA/CvB2ZRvBFE5R/vEPQ1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -544,10 +544,10 @@
           "base_uri": "https://localhost:8080/",
           "height": 816
         },
-        "outputId": "62200b8a-cddb-474a-a983-dfd4d9cbc300"
+        "outputId": "a81287ea-974f-40eb-f574-cd78ed075ab5"
       },
       "source": [
-        "print(\"EC history\")\n",
+        "print(\"Diabetes history\")\n",
         "print(\" --------------------------------------------------\")\n",
         "print(\"| Tasa de Aprendizaje | Iteraciones | Accuracy     |\")\n",
         "print(\" --------------------------------------------------\")\n",
@@ -555,12 +555,12 @@
         "  print(\"|        \" + str(his[0]) +                \"         |     \" + str(his[1]) + \"     | \" + str(his[2]) + \"%    |\")\n",
         "print(\" --------------------------------------------------\")"
       ],
-      "execution_count": 18,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "EC history\n",
+            "Diabetes history\n",
             " --------------------------------------------------\n",
             "| Tasa de Aprendizaje | Iteraciones | Accuracy     |\n",
             " --------------------------------------------------\n",
